--- a/Template_1/profile.css
+++ b/Template_1/profile.css
@@ -14,3 +14,16 @@ body, html {
       background-repeat: no-repeat;
       background-size: cover;
     }	
+	
+	.button {
+		border: none;
+        color: white;
+		background-color: #008CBA;
+        padding: 10px 25px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;	
+        }
